deployments/kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htfrontend
  labels:
    app: HTFE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: HTFE
  template:
    metadata:
      labels:
        app: HTFE
    spec:
      nodeSelector:
        external-apps: "true"
      containers:
      - name: htfrontend
        image: aliartiza75/ht-fe:0.0.2
        ports:
        - containerPort: 5002
