deployments/kubernetes/manifests/htfe_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ht-fe
spec:
  selector:
    app: HTFE
  ports:
    - name: ports
      port: 5002
      targetPort: 5002
  type: ClusterIP
