deployments/kubernetes/manifests/ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ht-fe
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: a79bfe2daf8004a6281b4e7fdbf60444-2c1a488441c2a388.elb.us-west-2.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ht-fe
            port: 
              number: 5002
